--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
-
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -21,4 +21,4 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
